# new-new-hexlet-project

./: pyproject.toml
applications/: ____init____.py  module.py
applications/scripts/: main.py  second_script.py  third.py
my_application/scripts/: main.py
new-projects/: file.py
new-projects/applications/scripts/: main.py
